--- a/index.html
+++ b/index.html
@@ -8,24 +8,28 @@
   <meta name="description" content="junior frontend developer react js html css javacript portfolio">
   <link rel="stylesheet" href="/assets/css/main.css">
   <link rel="stylesheet" href="/assets/css/m-q.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>Ayodele Samuel Adebayo --Portfolio</title>
 </head>
 <body>
   <!-- Body Start  -->
   <div class="container">
     <!-- Page Head -->
-    <header>
+    <header class="top-header">
       <!-- Logo and Nav Link Start -->
       <div class="top">
         <h1>A.S.A</h1>
-        <nav class="top-link">
-          <ul>
-            <li>About</li>
-            <li>Hire me</li>
-            <li>Contact me</li>
-            <li>Links</li>
+        <nav class="top-link" id="top-nav">
+          <ul class="links">
+            <li><a href="#about">About</a></li>
+            <li><a href="#">Hire me</a></li>
+            <li><a href="#">Contact me</a></li>
+            <!-- <li><a href="#">Links</a></li> -->
           </ul>
         </nav>
+        <div class="link-toggle">
+          <i class="fas fa-ba">A</i>
+        </div>
       </div>
       <!-- End of Logo and Nav Link Section -->
       <div class="intro-1">
@@ -39,10 +43,15 @@
       </section>
       </div>
     </header>
-    <!-- End of Page End -->
-    <div class="">
-      <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam nemo, quibusdam dolorum laborum rem et non aspernatur tenetur quasi ipsa soluta voluptatem expedita atque nostrum ut at libero repudiandae cupiditate itaque dolores nulla eum minima placeat. Nesciunt, nobis! Libero eaque cupiditate nulla deleniti veniam laboriosam id qui, corporis repellendus adipisci porro facilis ipsum quod officia. Odit ad reprehenderit quam eum corrupti tenetur! Expedita impedit cum praesentium, qui fuga ab culpa? Provident laudantium eos libero praesentium! Obcaecati, quae enim. Expedita quos non blanditiis. Quidem doloremque, animi rerum eligendi laborum laboriosam suscipit consequuntur voluptatem blanditiis cumque iusto omnis facilis. Temporibus, neque itaque.</span>
-    </div>
+    <!-- End of Page -->
+
+    <!-- About Section -->
+    <section class="about-me">
+      <header class="about">
+        <h4>About Me</h4>
+      </header>
+    </section>
   </div>
+  <script src="/assets/js/main.js"></script>
 </body>
 </html>
