--- a/index.html
+++ b/index.html
@@ -73,11 +73,14 @@
           <section class="section-3">
             <span> 
               <strong>
-                <b>Ayodele Samuel Adebayo</b>, is a Frontend Junior developer, 
-                using a super-power called Javascript along React Js, Python,
-                Django, Html, Css, Bootstrap, knowledge on Git Version Control, 
-                Netlify, Heroku, Pythonanywhere. having interest in solving complex problems in simple ways, 
-                also having knowledge of Python, Django and MySQL
+                <b style="color: orange;">Ayodele Samuel Adebayo</b>, is a Frontend Junior developer, 
+                using a super-power called <b style="color: rgb(82, 141, 141);">Javascript</b> along <a>React Js</a>,
+                <a style="color: rgb(187, 105, 6);">Html</a>, <a style="color: rgb(10, 216, 130);">Css</a>, 
+                <a style="color: blueviolet;">Bootstrap</a>, knowledge on <a style="color:brown">Git Version Control</a>, 
+                <a style="color: coral;">Netlify</a>, <a style="color: cornflowerblue;">Heroku, 
+                  <a style="color: rgb(117, 5, 27);">Pythonanywhere</a>. having interest in solving complex problems in simple ways, 
+                also having knowledge of <b style="color: darkolivegreen;">Python</b>, <a style="color: hotpink;">Django</a>
+                 and <a style="color: mediumaquamarine;">MySQL</a>
               </strong></span>
           </section>
         </div>
