--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
       <section>
         <form name="contact" class="form" netlify>
           <p>
-                <label><span>Name</span> <input type="text" name="name"></label>
+                <label><span>Name</span> <input type="text" name="name" required></label>
             </p>
             <p>
-                <label><span>Email</span> <input type="email" name="email"/></label>
+                <label><span>Email</span> <input type="email" name="email" required/></label>
             </p>
                 <button type="submit" class="btn">Subscribe</button>
             </p>
