--- a/index.html
+++ b/index.html
@@ -5,34 +5,30 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="Author" content="Ayodele Samuel Adebayo">
-  <meta name="description" content="junior frontend developer react js html css javacript portfolio">
+  <meta name="description" content="junior frontend developer, react js html css javacript portfolio">
   <link rel="stylesheet" href="/assets/css/main.css">
   <link rel="stylesheet" href="/assets/css/m-q.css">
-  <link rel="shortcut icon" href="your_image_path_and_name.ico" />
+  <link rel="shortcut icon" href="/assets/img/me - Copy.jpg" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/fontawesome.min.css" integrity="sha512-8jdwayz5n8F2cnW26l9vpV6+yGOcRAqz6HTu+DQ3FtVIAts2gTdlFZOGpYhvBMXkWEgxPN3Y22UWyZXuDowNLA==" crossorigin="anonymous" />
-  <title>Ayodele Samuel Adebayo --Portfolio</title>
+  <title>Ayodele Samuel Adebayo --PortFolio</title>
 </head>
 <body>
-  <!-- Body Start  -->
+  <!-- Content Start  -->
   <div class="container">
-    <!-- Page Head -->
+    <!-- Header Start -->
     <header class="top-header">
           <!-- Tiny classes are animations which shows around the webpage body when the MY SKILL BUTTON IS CLICKED -->
-           <!-- <p class="tiny tiny-left tiny-1 g">Django</p> -->
             <p class="tiny tiny-right tiny-1 b">Python</p>
             <p class="tiny tiny-c tiny-1 r">MySQL</p>
-   
+
          <!-- Logo and Nav Link Start -->
         <div class="top">
         <h1>A.S.A</h1>
         <nav class="top-link" id="top-nav">
-          <ul class="links">
-            
-            <li><a href="#" class='skillbutton' onlclick='showSkill();'>My Skills</a></li>
+          <ul class="links">  
+            <li><a href="#" class='skillbutton' onclick='showSkill();'>My Skills</a></li>
             <li><a href="#">Hire me</a></li>
             <li><a href="#about">About</a></li>
-           
-            <!-- <li><a href="#">Links</a></li> -->
           </ul>
         </nav>
         <div class="link-toggle">
@@ -40,9 +36,10 @@
         </div>
       </div>
       <!-- End of Logo and Nav Link Section -->
+
+      <!-- Main Body -->
       <div class="intro-1">
         <section class="section-one">
-          <!-- <p class="tiny tiny-left tiny-1 g">Version Control</p> -->
           <p class="tiny tiny-c tiny-1 y">html</p>
           <p class="tiny tiny-right tiny-1 r">JavaScript</p>
           <p class="tiny tiny-left tiny-1 p">css</p>
@@ -53,13 +50,13 @@
           <span>I help Companies Transform Their Businesses</span>
         </section>
         <p class="tiny tiny-right tiny-2 y">React js</p>
-      <section class="section-two">
-        <strong>Fellow at -TIIDELab INITIATIVE </strong>
-        <hr class="hr">
-      </section>
+        <section class="section-two">
+          <strong>Fellow at -TIIDELab INITIATIVE </strong>
+          <hr class="hr">
+        </section>
       </div>
     </header>
-    <!-- End of Page -->
+    <!-- End of Header -->
    
     <!-- About Section -->
     <section class="about-me">
@@ -84,6 +81,8 @@
       </header>
     </section>
     <!-- End of About Section -->
+
+    <!-- My Social Links Section -->
     <div class="my_links">
       <ul>
         <li><a href="https://www.facebook.com/unclebay"><i class="fas fa-facebook-f">Facebook</i></a></li>
@@ -91,6 +90,7 @@
         <li><a href="#about"><i class="fab fa-github">Twitter</i></a></li>
         <li><a href=""></a></li>
       </ul>
+      <!-- Netlify Subscribe Email Section -->
       <section>
         <form name="contact" class="form" netlify>
           <p>
@@ -103,13 +103,21 @@
             </p>
         </form>
       </section>
+      <!-- Netlify Form End -->
     </div>
+    <!-- Link Section End -->
+
+    <!-- Footer Start -->
     <div>
       <footer>
         <h5>Walk-In Tech &copy;2020</h5>
       </footer>
     </div>
+    <!-- Footer End -->
   </div>
+  <!-- Content End -->
+
+  <!-- JavaScript  -->
   <script src="/assets/js/main.js"></script>
 </body>
 </html>
