Social Links- Icon Added

--- a/index.html
+++ b/index.html
@@ -85,19 +85,20 @@
     <!-- My Social Links Section -->
     <div class="my_links">
       <ul>
-        <li><a href="https://www.facebook.com/unclebay"><i class="fas fa-facebook-f">Facebook</i></a></li>
-        <li><a href="https://www.github.com"><i class="fab fa-github">Github</i></a></li>
-        <li><a href="#about"><i class="fab fa-github">Twitter</i></a></li>
+        <li><a href="https://www.facebook.com/unclebay"><img src="/assets/img/facebook.svg" class="social-link">Facebook</a></li>
+        <li><a href="https://www.github.com/unclebay143"> <img src="/assets//img/github.svg" class="social-link"> Github</a></li>
+        <li><a href="https://www.github.com"> <img src="/assets//img/linkedin.svg" class="social-link"> LinkedIn</a></li>
+        <li><a href=""><img src="/assets//img/twitter.svg" class="social-link">Twitter</a></li>
         <li><a href=""></a></li>
       </ul>
       <!-- Netlify Subscribe Email Section -->
       <section>
         <form name="contact" class="form" netlify>
           <p>
-                <label><span>Name</span> <input type="text" name="name" required></label>
+                <label><span>Name</span> <input type="text" name="name"  required></label>
             </p>
             <p>
-                <label><span>Email</span> <input type="email" name="email" required/></label>
+                <label><span>Email</span> <input type="email" name="email"  required/></label>
             </p>
                 <button type="submit" class="btn">Subscribe</button>
             </p>
