--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="description" content="junior frontend developer, react js html css javacript portfolio">
   <link rel="stylesheet" href="/assets/css/main.css">
   <link rel="stylesheet" href="/assets/css/m-q.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap" rel="stylesheet">
   <link rel="shortcut icon" href="/assets/img/me - Copy.jpg" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/fontawesome.min.css" integrity="sha512-8jdwayz5n8F2cnW26l9vpV6+yGOcRAqz6HTu+DQ3FtVIAts2gTdlFZOGpYhvBMXkWEgxPN3Y22UWyZXuDowNLA==" crossorigin="anonymous" />
   <title>Ayodele Samuel Adebayo --PortFolio</title>
@@ -82,13 +83,17 @@
     </section>
     <!-- End of About Section -->
 
-    <!-- My Social Links Section -->
+    
+
+    <!-- Footer Start -->
+    <div class="footer-container">
+      <!-- My Social Links Section -->
     <div class="my_links">
       <ul>
         <li><a href="https://www.facebook.com/unclebay"><img src="/assets/img/facebook.svg" class="social-link">Facebook</a></li>
         <li><a href="https://www.github.com/unclebay143"> <img src="/assets//img/github.svg" class="social-link"> Github</a></li>
-        <li><a href="https://www.github.com"> <img src="/assets//img/linkedin.svg" class="social-link"> LinkedIn</a></li>
-        <li><a href=""><img src="/assets//img/twitter.svg" class="social-link">Twitter</a></li>
+        <li><a href="https://www.linkedin.com/in/ayodele-samuel-ayodele-55902819a/"> <img src="/assets//img/linkedin.svg" class="social-link"> LinkedIn</a></li>
+        <li><a href="https://twitter.com/Ayodele29338919"><img src="/assets//img/twitter.svg" class="social-link">Twitter</a></li>
         <li><a href=""></a></li>
       </ul>
       <!-- Netlify Subscribe Email Section -->
@@ -108,8 +113,6 @@
     </div>
     <!-- Link Section End -->
 
-    <!-- Footer Start -->
-    <div>
       <footer>
         <h5>Walk-In Tech &copy;2020</h5>
       </footer>
