Fixed Message Catch Issue with netlify

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             </div>
             <div class="contact-form-section-2">
               <p>
-                <textarea class="message" placeholder="Message..." required></textarea>
+                <textarea class="message" name="message" placeholder="Message..." required></textarea>
               </p>
             </div>
             <p>
