Fix nav-bar underlay

--- a/index.html
+++ b/index.html
@@ -24,20 +24,23 @@
             <p class="tiny tiny-c tiny-1 r">MySQL</p>
          <!-- Logo and Nav Link Start -->
         <div class="top">
-        <h1 id="Logo">A.S.A</h1>
-        <nav class="top-link" id="top-nav">
-          <ul class="links">  
-            <li><a id="link1" href="#" class='skillbutton' onclick='showSkill();'>My Skills</a></li>
-            <li><a id="link3" href="#my_projects" >Projects</a></li>
-            <li><a id="link2" href="#">Hire me</a></li>
-            <li><a id="link3" href="#contact-me" onclick="contactMe();">Contact me</a></li>
-            <li><a id="link4" href="#about" onclick="about();">About</a></li>
-          </ul>
-        </nav>
-        <div class="link-toggle">
-          <i class="fas fa-ba">A</i>
+          <div id="high">
+            <h1 id="Logo">A.S.A</h1>
+            <nav class="top-link" id="top-nav">
+              <ul class="links">  
+                <li><a id="link1" href="#" class='skillbutton' onclick='showSkill();'>My Skills</a></li>
+                <li><a id="link3" href="#my_projects" >Projects</a></li>
+                <li><a id="link2" href="#">Hire me</a></li>
+                <li><a id="link3" href="#contact-me" onclick="contactMe();">Contact me</a></li>
+                <li><a id="link4" href="#about" onclick="about();">About</a></li>
+              </ul>
+            </nav>
+            <div class="link-toggle">
+              <i class="fas fa-ba">A</i>
+            </div>
+          </div>
+          
         </div>
-      </div>
       <!-- End of Logo and Nav Link Section -->
 
       <!-- Main Body -->
