--- a/test.html
+++ b/test.html
@@ -59,6 +59,27 @@
   </style>
 </head>
 <body>
+  <h1><span>The quick brown fox jumped over the lazy dog</span></h1>
+
+<style>
+h1 {
+  width: 70%;
+  margin: auto;
+  color: #fff;
+  font-family: 'Lato', sans-serif;
+  font-size: 48px;
+  font-weight: 400;
+  text-align: center;
+  line-height: 80px;
+}
+
+h1 span {
+  background: rgba(0, 0, 0, 0.5);
+  -moz-box-shadow: 0 0 0 10px rgba(0, 0, 0, 0.5);
+  -webkit-box-shadow: 0 0 0 10px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0 0 10px rgba(0, 0, 0, 0.5);
+}
+</style>
   <div class="Navbar">
     <div class="Navbar__Link Navbar__Link-brand">
        Website title
