Fix layout compatibility and add support for smaller device navbar

--- a/main-body.html
+++ b/main-body.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="assets/css/loader.css">
   <link rel="stylesheet" href="assets/css/moments.css">
   <link rel="stylesheet" href="assets/css/skills_animation.css">
-  <link rel="shortcut icon" href="assets/img/me - Copy.jpg" />
+  <link rel="shortcut icon" href="assets/img/me.jpg" />
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script src="https://kit.fontawesome.com/c375a2cc0a.js" crossorigin="anonymous"></script>
   <title>Ayodele Samuel Adebayo --PortFolio</title>
