Clean Up and Comments

--- a/index.html
+++ b/index.html
@@ -1,4 +1,18 @@
 <!-- My Portfolio -TIIDELAB PROJECT -->
+<!-- 
+  
+
+''''''''            ''    ''            ''    '''''''''
+''    ''          ''  ''    ''        ''    ''        ''
+''    ''        ''    ''      ''    ''      ''        '' 
+''''''''      ''''''''''         ''         ''        ''
+''    ''    ''        ''          ''        ''        ''
+''    ''  ''          ''          ''        ''        ''
+'''''''' ''           ''          ''          '''''''''
+ 
+ -->
+ <!-- Landing Page -->
+ 
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -25,10 +39,8 @@
   </div>
   <!-- Goto Top Button -->
   <button onclick="topFunction()" id="topBtn" title="Go to top">Scroll To Top</button>
-  
   <!-- Content Start  -->
   <div class="container">
-
     <!-- Header Start -->
     <header class="top-header">
       <!-- Main Header body -->
@@ -43,24 +55,23 @@
             <li> <a href='/main-body.html#testimonial'>Testimonial</a> </li>
             <li> <a href='/main-body.html#about'>About</a> </li>
           </ul>
-          </label>
+        </label>
       </div>
-
+      <!-- Animation Section, yet to be implemented Every tiny class is an animation-->
       <div class="intro-1">
-
         <section class="section-one">
           <p class="tiny tiny-c tiny-1 y">html</p>
           <p class="tiny tiny-right tiny-1 r">JavaScript</p>
           <p class="tiny tiny-left tiny-1 p">css</p>
+          <!-- l<<<< Landing Page Secton >>>>> -->
           <h3>Ayodele Samuel Adebayo</h3>
           <p>Junior Frontend Developer</p>
+          <!-- My skill section -->
           <p id='myskill'>Html, Css, JavaScript, React Js, Bootstrap, Git- Version Control, Python, Django</p>
           <p class="tiny tiny-left tiny-1 g">Django</p>
           <span>I help Companies Transform Their Businesses</span>
         </section>
-
         <p class="tiny tiny-right tiny-2 y">React js</p>
-
         <section class="section-two">
           <strong>Currently Fellow at -TIIDELab INITIATIVE </strong>
           <hr class="hr">
@@ -68,12 +79,11 @@
             <i class="fa fa-chevron-down" id="stat-link" aria-hidden="true"></i>
           </a>
         </section>
-
       </div>
     </header>
     <!-- End of Header -->
     <script src="assets/js/main.js"></script>
     <script src="assets/js/loader.js"></script>
-</div>
+  </div>
 </body>
 </html>
